src-ken&y/objects/Sales_Order__c.object
<CustomObject>
    <customHelpPage>HelpSalesOrders_Managing</customHelpPage>
    <description>Sales Order Header</description>
    <fields>
        <fullName>Accounting_Default__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>override the normal rules with these segments, apply to each line item at shipment time</description>
        <label>Accounting Segments</label>
        <referenceTo>Accounting_Default__c</referenceTo>
        <relationshipLabel>Sales Orders</relationshipLabel>
        <relationshipName>Sales_Orders</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Agreement__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Agreement</label>
        <referenceTo>Agreement__c</referenceTo>
        <relationshipLabel>Sales Orders</relationshipLabel>
        <relationshipName>Sales_Orders</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Allowances__c</fullName>
        <description>Total of all Allowances which are applied at the Sales Order header level, excludes line allowances</description>
        <label>Allowances</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Approval_Status__c</fullName>
        <description>This field will be used to identify actual sales order from unapproved quotes</description>
        <label>Approval Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Pending Authorization</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>Not Approved</fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Autonumber__c</fullName>
        <displayFormat>{0000000000}</displayFormat>
        <label>Autonumber</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Backorder_Value__c</fullName>
        <description>Value of the unshipped quantity on all orders; tax is not included</description>
        <inlineHelpText>Value of the unshipped quantity on all orders; tax is not included.</inlineHelpText>
        <label>Backorder Value</label>
        <summarizedField>Sales_Order_Line__c.Backorder_Value__c</summarizedField>
        <summaryFilterItems>
            <field>Sales_Order_Line__c.Status__c</field>
            <operation>notEqual</operation>
            <value>Closed</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Sales_Order_Line__c.Status__c</field>
            <operation>notEqual</operation>
            <value>Cancelled</value>
        </summaryFilterItems>
        <summaryForeignKey>Sales_Order_Line__c.Sales_Order__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Bill_to_City__c</fullName>
        <description>City where Sales Order should be billed to. Defaults from Customer - Account - Billing City.</description>
        <label>Bill-to City</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bill_to_Country__c</fullName>
        <description>Country where Sales Order should be billed to. Defaults from Customer - Account - Billing Country.</description>
        <label>Bill-to Country</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bill_to_State__c</fullName>
        <description>State where Sales Order should be billed to. Defaults from Customer - Account - Billing State/Province.</description>
        <label>Bill-to State</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bill_to_Street__c</fullName>
        <description>Street where Sales Order should be billed to. Defaults from Customer - Account - Billing Street.</description>
        <label>Bill-to Street</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Bill_to_Zip_Code__c</fullName>
        <description>Zip Code where Sales Order should be billed to. Defaults from Customer - Account - Billing Zip/Postal Code.</description>
        <label>Bill-to Zip Code</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bill_to__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to customer</description>
        <label>Customer Bill To</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Customer__c.RecordTypeId</field>
                <operation>equals</operation>
                <value>Bill To</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Customer__c</referenceTo>
        <relationshipLabel>Sales Orders (Bill To)</relationshipLabel>
        <relationshipName>Sales_Orders3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Billing_UOM__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Billing UOM</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>Billing UOM should have Time as type</errorMessage>
            <filterItems>
                <field>UOM__c.Type__c</field>
                <operation>equals</operation>
                <value>Time</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>UOM__c</referenceTo>
        <relationshipLabel>Sales Orders (Billing UOM)</relationshipLabel>
        <relationshipName>Sales_Orders_Billing</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Bracket_Price_Field_In_Use__c</fullName>
        <description>Which bracket price field is in use by this sales order, it comes out based on quantity</description>
        <inlineHelpText>The bracket price field is based on quantity.</inlineHelpText>
        <label>Bracket Price Field In Use</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <description>Customer City</description>
        <label>City</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Company_Identifier__c</fullName>
        <description>Unique identifier to specify this company for data integrations</description>
        <label>Company Identifier</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Company__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Company</label>
        <referenceTo>Company__c</referenceTo>
        <relationshipLabel>Sales Orders</relationshipLabel>
        <relationshipName>Sales_Orders</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <description>Customer Country</description>
        <label>Country</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Credit_Hold__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If checked, this sales order is on credit hold.</description>
        <inlineHelpText>If checked, this sales order is on credit hold.</inlineHelpText>
        <label>Credit Hold</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Currency__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to currency</description>
        <label>Currency</label>
        <referenceTo>Currency__c</referenceTo>
        <relationshipLabel>Sales Order Currency</relationshipLabel>
        <relationshipName>Sales_Order_Currency</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Customer_Identifier__c</fullName>
        <description>Locate the customer by this text</description>
        <label>Customer Identifier</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Order_Qty_factor_At__c</fullName>
        <formula>TEXT (Customer__r.Order_Quantity_Factor_At__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>The &quot;Sold To&quot; Customer&apos;s order quantity requirements.</inlineHelpText>
        <label>Customer Order Quantity factor At</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Purchase_Order_Date__c</fullName>
        <description>Customer&apos;s Purchase Order date</description>
        <label>Customer Purchase Order Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Customer_Purchase_Order__c</fullName>
        <description>Account&apos;s purchase order number</description>
        <label>Customer Purchase Order</label>
        <length>120</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to Customer</description>
        <label>Customer Sold To</label>
        <lookupFilter>
            <active>true</active>
            <booleanFilter>1 AND (2 OR 3)</booleanFilter>
            <errorMessage>Sales Order Customer value does not exist or does not match filter criteria.</errorMessage>
            <filterItems>
                <field>Customer__c.RecordTypeId</field>
                <operation>equals</operation>
                <value>Sold To</value>
            </filterItems>
            <filterItems>
                <field>Customer__c.Company__c</field>
                <operation>equals</operation>
                <valueField>$Source.Company__c</valueField>
            </filterItems>
            <filterItems>
                <field>Customer__c.Company__c</field>
                <operation>equals</operation>
                <value></value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Customer__c</referenceTo>
        <relationshipLabel>Sales Orders (Customer)</relationshipLabel>
        <relationshipName>Sales_Orders</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Date_Time_Ordered__c</fullName>
        <defaultValue>NOW()</defaultValue>
        <description>Date and time order placed</description>
        <label>Date/Time Ordered</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Delivery_Method__c</fullName>
        <description>Method Of Delivery.</description>
        <label>Delivery Method</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Delivery</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>Pickup</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Dimension_UOM__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Dimension UOM field</description>
        <label>Dimension UOM</label>
        <referenceTo>UOM__c</referenceTo>
        <relationshipLabel>Sales Order (Dimension UOM)</relationshipLabel>
        <relationshipName>Sales_Order_Dimension_UOM</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Dimensional_Weight__c</fullName>
        <description>Cube Adjusted Weight</description>
        <formula>IF ( OR( ISBLANK (Means_of_Transport__c), ISBLANK (Means_of_Transport__r.Maximum_Weight__c) ), 
	  0, 
      Means_of_Transport__r.Maximum_Weight__c * Maximum_Dimensional_Percent__c
   )</formula>
        <label>Dimensional Weight</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Edited_By__c</fullName>
        <label>Edited By</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Edited_Time__c</fullName>
        <label>Edited Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Exceeds_Max_Weight__c</fullName>
        <formula>Dimensional_Weight__c &gt;  Means_of_Transport__r.Maximum_Weight__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>If selected, the selected order exceeds the maximum weight specified in the Means of Transport record.</inlineHelpText>
        <label>Exceeds Max Weight</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Exception_Reason__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>If set, this indicates one of the reasons that this order has an exception</description>
        <inlineHelpText>A credit exception reason can be applied to an order to prevent it from being released without putting the customer on credit hold.</inlineHelpText>
        <label>Exception Reason</label>
        <referenceTo>Reason_Code__c</referenceTo>
        <relationshipLabel>Sales Orders</relationshipLabel>
        <relationshipName>Sales_Orders</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Exceptions_Count__c</fullName>
        <description>Stores the number of currently unresolved exceptions on this record.</description>
        <label>Exceptions Count</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Expedite__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If checked, the entire sales order will be given priority, overriding the need date.</description>
        <label>Expedite</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ExtId__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>FOB__c</fullName>
        <description>FOB Terms</description>
        <label>FOB</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>FOB 01 – Pre-pay No Fuel Surcharge</fullName>
                </value>
                <value>
                    <fullName>FOB 02 – Pay and Add Fuel Surcharge</fullName>
                </value>
                <value>
                    <fullName>FOB 03 – Collect No Fuel Surcharge</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Auto_Allocate_Complete__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Auto Allocate Complete</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Has_Exceptions__c</fullName>
        <description>Indicates if the record has exceptions that need to be resolved.</description>
        <formula>OR(
   Exceptions_Count__c &gt; 0,
   Line_Exceptions__c &gt; 0
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Exceptions must be resolved before the sales order/line can proceed.</inlineHelpText>
        <label>Has Exceptions</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Historical__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Historical</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Hold__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Hold</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Line_Exceptions__c</fullName>
        <description>Lines on this sales order that indicate exceptions</description>
        <label>Line Exceptions</label>
        <summaryFilterItems>
            <field>Sales_Order_Line__c.Has_Exceptions__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>Sales_Order_Line__c.Sales_Order__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Maximum_Dimensional_Percent__c</fullName>
        <formula>IF (ISBLANK (Means_of_Transport__c), null, 
	MAX ( 
		IF ( OR(ISBLANK(Means_of_Transport__r.Maximum_Cube__c), ISNULL(Means_of_Transport__r.Maximum_Cube__c), Means_of_Transport__r.Maximum_Cube__c=0), 0, Total_Order_Volume__c / Means_of_Transport__r.Maximum_Cube__c), 
		IF ( OR(ISBLANK(Means_of_Transport__r.Maximum_Weight__c), ISNULL(Means_of_Transport__r.Maximum_Weight__c), Means_of_Transport__r.Maximum_Weight__c=0), 0, Total_Weight__c / Means_of_Transport__r.Maximum_Weight__c), 
		IF ( OR(ISBLANK(Means_of_Transport__r.Pallet_Positions_double_stacked__c), ISNULL(Means_of_Transport__r.Pallet_Positions_double_stacked__c), Means_of_Transport__r.Pallet_Positions_double_stacked__c=0), 0, CEILING(Number_of_pallets__c) / (Means_of_Transport__r.Pallet_Positions_double_stacked__c)) 
	) 
)</formula>
        <label>Maximum Dimensional %</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Means_of_Transport__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The means of transport by which the sales order should be delivered.</description>
        <label>Means of Transport</label>
        <referenceTo>Means_of_Transport__c</referenceTo>
        <relationshipLabel>Sales Orders</relationshipLabel>
        <relationshipName>Sales_Orders</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Number_of_Floor_Spaces__c</fullName>
        <label>Number of Floor Spaces</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_pallets__c</fullName>
        <label>Number of pallets</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Open_Sales_Order_Lines__c</fullName>
        <description>Number of open sales order lines</description>
        <label>Open Sales Order Lines</label>
        <summaryFilterItems>
            <field>Sales_Order_Line__c.Status__c</field>
            <operation>notEqual</operation>
            <value>Closed</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Sales_Order_Line__c.Status__c</field>
            <operation>notEqual</operation>
            <value>Cancelled</value>
        </summaryFilterItems>
        <summaryForeignKey>Sales_Order_Line__c.Sales_Order__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Order_Total__c</fullName>
        <description>Total value with tax for this order</description>
        <formula>Subtotal__c + Allowances__c  +  VAT_Amount__c + Sales_Tax__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Order Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Original_Sales_Order__c</fullName>
        <description>Holds the reference to the name of the original sales order if this sales order is of type &apos;adjustment&apos;.</description>
        <inlineHelpText>For adjustment sales orders, this is a reference to the  original sales order.</inlineHelpText>
        <label>Original Sales Order</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Override_Credit_Hold__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Checkbox to override the credit hold put on the sales order if the customer is over the credit limit.</description>
        <inlineHelpText>Select the checkbox to ignore the credit hold and process the sales order.</inlineHelpText>
        <label>Override Credit Hold</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Parcel__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Parcel</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Payment_Term__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Payment terms</description>
        <label>Payment Terms</label>
        <referenceTo>Payment_Term__c</referenceTo>
        <relationshipLabel>Sales Orders</relationshipLabel>
        <relationshipName>Sales_Orders</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Prepayments_Received__c</fullName>
        <label>Prepayments Received</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Price_Determination_Date__c</fullName>
        <label>Price Determination Date</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Order Date</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>Shipment Date</fullName>
                </value>
                <value>
                    <fullName>Manual</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Pricebook__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Pricebook used for this sales order, defaults from Sold To customer</description>
        <label>Pricebook</label>
        <referenceTo>Pricebook__c</referenceTo>
        <relationshipLabel>Sales Orders</relationshipLabel>
        <relationshipName>Sales_Orders</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Pricing_Bracket__c</fullName>
        <description>The pricing bracket that should be used for all the lines on the sales order to populate the unit price from pricebook lines. If no value is selected, then system calculates the pricing bracket based on the total product weight of the sales order.</description>
        <label>Pricing Bracket</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Base Price</fullName>
                </value>
                <value>
                    <fullName>Bracket 2</fullName>
                </value>
                <value>
                    <fullName>Bracket 3</fullName>
                </value>
                <value>
                    <fullName>Bracket 4</fullName>
                </value>
                <value>
                    <fullName>Bracket 5</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Pricing_Date__c</fullName>
        <label>Pricing Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Primary_Contact__c</fullName>
        <description>Contact for this sales order</description>
        <label>Primary Contact</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Purchase_Order__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Related Purchase Order.</description>
        <label>Purchase Order</label>
        <referenceTo>Purchase_Order__c</referenceTo>
        <relationshipLabel>Sales Orders</relationshipLabel>
        <relationshipName>Sales_Orders</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Quote__c</fullName>
        <description>Quote number if a quote is attached to this sales order</description>
        <label>Quote</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ready__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Process Automation considers records which have Ready == true</description>
        <label>Ready</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Reason_Code__c</fullName>
        <label>Reason Code</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Cut</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Recurrence_Start_Date__c</fullName>
        <label>Recurrence Start Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Related_Sales_Order__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The sales order that is replaced by this order</description>
        <inlineHelpText>The sales order that was replaced by the selected order.</inlineHelpText>
        <label>Related Sales Order</label>
        <referenceTo>Sales_Order__c</referenceTo>
        <relationshipLabel>Sales Orders</relationshipLabel>
        <relationshipName>Sales_Orders</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Released_to_3PL__c</fullName>
        <defaultValue>false</defaultValue>
        <description>When this field is set to true then no modification is allowed.</description>
        <label>Released to 3PL</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Required_Date__c</fullName>
        <description>Default required date for sales order lines.</description>
        <label>Need Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Sales_Order_Number__c</fullName>
        <description>Sales order number to uniquely identify record from other systems used for data integration purposes</description>
        <externalId>true</externalId>
        <label>Sales Order Number</label>
        <length>15</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Sales_Tax__c</fullName>
        <label>Sales Tax Amount</label>
        <summarizedField>Sales_Order_Line__c.Sales_Tax__c</summarizedField>
        <summaryFilterItems>
            <field>Sales_Order_Line__c.Status__c</field>
            <operation>notEqual</operation>
            <value>Cancelled</value>
        </summaryFilterItems>
        <summaryForeignKey>Sales_Order_Line__c.Sales_Order__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Ship_Complete__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If box is cleared, customer allows partial shipments; if box is selected, all items on the order must be shipped together</description>
        <inlineHelpText>If selected, all items on the order must be shipped together. Otherwise, partial shipments are permitted.</inlineHelpText>
        <label>Ship Complete</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Ship_From_Location__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Ship From Location</description>
        <label>Ship From Location</label>
        <referenceTo>Location__c</referenceTo>
        <relationshipLabel>Sales Orders</relationshipLabel>
        <relationshipName>Sales_Orders</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Ship_to_City__c</fullName>
        <description>City where Sales Order should be shipped to. Defaults from Customer - Account - Shipping City.</description>
        <label>Ship-to City</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ship_to_Country__c</fullName>
        <description>Country where Sales Order should be shipped to. Defaults from Customer - Account - Shipping Country.</description>
        <label>Ship-to Country</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ship_to_State__c</fullName>
        <description>State where Sales Order should be shipped to. Defaults from Customer - Account - Shipping State/Province.</description>
        <label>Ship-to State</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ship_to_Street__c</fullName>
        <description>Streetwhere Sales Order should be shipped to. Defaults from Customer - Account - Shipping Street.</description>
        <label>Ship-to Street</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Ship_to_Zip_Code__c</fullName>
        <description>Zip Code where Sales Order should be shipped to. Defaults from Customer - Account - Shipping Zip/Postal Code.</description>
        <label>Ship-to Zip Code</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ship_to__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to Customer</description>
        <label>Customer Ship To</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Customer__c.RecordTypeId</field>
                <operation>equals</operation>
                <value>Ship To</value>
            </filterItems>
            <filterItems>
                <field>Customer__c.Parent_Customer__c</field>
                <operation>equals</operation>
                <valueField>$Source.Customer__c</valueField>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>Customer__c</referenceTo>
        <relationshipLabel>Sales Orders (Ship To)</relationshipLabel>
        <relationshipName>Sales_Orders1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <description>Customer State</description>
        <label>State</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status_Detail__c</fullName>
        <description>Shows status detail as per state of child objects i.e. invoices, lines etc.</description>
        <label>Status Detail</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Draft</fullName>
                </value>
                <value>
                    <fullName>Open</fullName>
                </value>
                <value>
                    <fullName>Allocated</fullName>
                </value>
                <value>
                    <fullName>Aggregated</fullName>
                </value>
                <value>
                    <fullName>Pick</fullName>
                </value>
                <value>
                    <fullName>Shipped</fullName>
                </value>
                <value>
                    <fullName>Invoiced</fullName>
                </value>
                <value>
                    <fullName>Closed</fullName>
                </value>
                <value>
                    <fullName>Cancelled</fullName>
                </value>
                <value>
                    <fullName>Pack</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <description>Order status</description>
        <label>Order Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Draft</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>Open</fullName>
                </value>
                <value>
                    <fullName>Closed</fullName>
                </value>
                <value>
                    <fullName>Cancelled</fullName>
                </value>
                <value>
                    <fullName>On hold</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Step__c</fullName>
        <label>Step</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Street__c</fullName>
        <description>Customer Street</description>
        <label>Street</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Subtotal__c</fullName>
        <description>Total of Extended Price of all Sales Order Lines</description>
        <label>Subtotal</label>
        <summarizedField>Sales_Order_Line__c.Extended_Price__c</summarizedField>
        <summaryFilterItems>
            <field>Sales_Order_Line__c.Status__c</field>
            <operation>notEqual</operation>
            <value>Cancelled</value>
        </summaryFilterItems>
        <summaryForeignKey>Sales_Order_Line__c.Sales_Order__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Top_Parent_Customer__c</fullName>
        <description>Top parent customer name</description>
        <formula>Customer__r.Top_Parent_Customer__r.Name</formula>
        <label>Top Parent Customer</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Total_Order_Volume__c</fullName>
        <description>Total of order volume of all order lines</description>
        <label>Total Order Volume</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Product_Weight__c</fullName>
        <label>Total Product Weight</label>
        <summarizedField>Sales_Order_Line__c.Product_Weight__c</summarizedField>
        <summaryFilterItems>
            <field>Sales_Order_Line__c.Status__c</field>
            <operation>notEqual</operation>
            <value>Cancelled</value>
        </summaryFilterItems>
        <summaryForeignKey>Sales_Order_Line__c.Sales_Order__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
</CustomObject>